media qury fix may be

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <div class="main-container">
 
 
-       <div class=" ">
+       <div class="container-fluid ">
          <nav class="navbar navbar-expand-lg navbar-dark ">
            <img class="mealpluslogo" src="images/Logo M+-04.png" alt="Meal plus logo "> <a class="navbar-brand" href="#">Meal PLUS </a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
