--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
          <div class="row rowt">
-           <div class="col-lg-6 col-md-6">
+           <div class="col-lg-6 ">
 
              <h1 class="main-h1"> <b>Gourmet Food <br> Delivered at <br> Your Doorstep</b></h1>
 
@@ -73,7 +73,7 @@
 
 
            </div>
-           <div class="col-lg-6 col-md-6 ">
+           <div class="col-lg-6  ">
              <center>
                <img class="mealplus" src="images/m+ proto.png" alt="meal plus picture">
              </center>
