added the functionality

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
              <h1 class="main-h1"> <b>Gourmet Food <br> Delivered at <br> Your Doorstep</b></h1>
 
-             <button type="button" class="btn btn-dark btn-lg btn-download "><i class="fab fa-apple"></i> Download</button>
-             <button type="button" class="btn btn-success btn-lg btn-download "><i class="fab fa-google-play"></i> Download</button>
+             <a type="button" class="btn btn-dark btn-lg btn-download "><i class="fab fa-apple"></i> Download</a>
+             <a type="button" class="btn btn-success btn-lg btn-download " href="https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-google-play"></i> Download</a>
 
 
            </div>
@@ -194,8 +194,8 @@
    <section id="download-title">
      <div class="last-title">
        <h1 class="main-h1">Find the True Love for Your Stomach <br> Today.</h1>
-       <button class="btn btn-dark btn-lg btn-Download-end " type="button" name="button"><i class="fab fa-google-play"></i> Download</button>
-       <button class="btn btn-light  btn-lg btn-Download-end" type="button" name="button"><i class="fab fa-apple"></i> Download</button>
+       <a class="btn btn-dark btn-lg btn-Download-end " type="button" name="button"><i class="fab fa-google-play"></i> Download</a>
+       <a class="btn btn-light  btn-lg btn-Download-end" type="button" name="button" href=" https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-apple"></i> Download</a>
      </div>
    </section>
    <!-- download-title -->
