--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
              <h1 class="main-h1"> <b>Gourmet Food <br> Delivered at <br> Your Doorstep</b></h1>
 
-             <a type="button" class="btn btn-dark btn-lg btn-download "><i class="fab fa-apple"></i> Download</a>
+             <a type="button" class="btn btn-dark btn-lg btn-download " href="#"><i class="fab fa-apple"></i> Download</a>
              <a type="button" class="btn btn-success btn-lg btn-download " href="https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-google-play"></i> Download</a>
 
 
@@ -194,7 +194,7 @@
    <section id="download-title">
      <div class="last-title">
        <h1 class="main-h1">Find the True Love for Your Stomach <br> Today.</h1>
-       <a class="btn btn-dark btn-lg btn-Download-end " type="button" name="button"><i class="fab fa-google-play"></i> Download</a>
+       <a class="btn btn-dark btn-lg btn-Download-end " type="button" name="button" href="#"><i class="fab fa-google-play"></i> Download</a>
        <a class="btn btn-light  btn-lg btn-Download-end" type="button" name="button" href=" https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-apple"></i> Download</a>
      </div>
    </section>
