addded the menu card and have styled the web site

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
        <div class="container-fluid ">
          <nav class="navbar navbar-expand-lg navbar-dark ">
-           <img class="mealpluslogo" src="images/Logo M+-04.png" alt="Meal plus logo "> <a class="navbar-brand" href="#">Meal PLUS </a>
+           <img class="mealpluslogo nav-br" src="images/Logo M+-04.png" alt="Meal plus logo "> <a class="navbar-brand nav-br " href="#">Meal PLUS </a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -48,7 +48,7 @@
                    <a class="dropdown-item" href="#pricing">Vegetarian</a>
                    <a class="dropdown-item" href="#pricing">Non-Vegetarian</a>
                    <div class="dropdown-divider"></div>
-                   <a class="dropdown-item" href="#pricing">Something else here</a>
+                   <a class="dropdown-item" href="#pricing">Snacks</a>
                  </div>
                </li>
                <li class="nav-item">
@@ -68,8 +68,8 @@
 
              <h1 class="main-h1"> <b>Gourmet Food <br> Delivered at <br> Your Doorstep</b></h1>
 
-             <a type="button" class="btn btn-dark btn-lg btn-download " href="#"><i class="fab fa-apple"></i> Download</a>
-             <a type="button" class="btn btn-success btn-lg btn-download " href="https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-google-play"></i> Download</a>
+             <a target="_blank" type="button" class="btn btn-dark btn-lg btn-download " href="#"><i class="fab fa-apple"></i> Download</a>
+             <a target="_blank" type="button" class="btn btn-success btn-lg btn-download " href="https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-google-play"></i> Download</a>
 
 
            </div>
@@ -121,16 +121,16 @@
        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
          <div class="carousel-inner">
            <div class="carousel-item active">
-             <h2>I am now obsesed with the food thay have provided and this is the bst thing i have ever tested in my life </h2>
+             <h2>I am now obsesed with the food thay have provided and this is the best thing i have ever tested in my life </h2>
              <center>
                <img class="person" src="images/people.png" alt="image of a person ">
                <p>i am a person 1</p>
              </center>
            </div>
            <div class="carousel-item">
-             <h2>I used to search for good food every whare but now i am free wit the help of Meal plus </h2>
+             <h2>I used to search for good food every where but now i am free with the help of Meal plus </h2>
              <center>
-                <img class="person" src="images/people.png" alt="image of a person ">
+               <img class="person" src="images/people.png" alt="image of a person ">
                <p>i am a person 2</p>
              </center>
            </div>
@@ -156,33 +156,40 @@
        <div class="col-lg-4 col-md-6">
          <div class="card mcard">
            <div class="card-header">
-             header 1
+             <h1>Vegetarian </h1>
            </div>
            <div class="card-body">
-             body 1 <br>
-             <button class="btn btn-outline-dark btn-lg btn-block " type="button" name="button">btn </button>
+             <p>Chilli paneer 250/portion </p> <br>
+             <p>Paneer tikka 250/portion </p> <br>
+             <p> Butter paneer masala 250/portion</p> <br>
+             <a href="#" target="_blank" class="btn btn-outline-dark btn-lg btn-block " type="button" name="button">btn </a>
            </div>
          </div>
        </div>
        <div class="col-lg-4 col-md-6">
          <div class="card mcard">
            <div class="card-header">
-             header 2
+             <h1> NON-Vegetarian </h1>
+
            </div>
            <div class="card-body">
-             body 2 <br>
-             <button class="btn btn-dark btn-lg btn-block " type="button" name="button">btn</button>
+             <p> Fried chicken 230/portion </p><br>
+             <p> Butter chicken 269/portion </p> <br>
+             <p>Bhuna chicken 230/portion </p> <br>
+             <a href="#" target="_blank" class="btn btn-dark btn-lg btn-block " type="button" name="button">btn</a>
            </div>
          </div>
        </div>
        <div class="col-lg-4 ">
          <div class="card mcard">
            <div class="card-header">
-             header 3
+             <h1> Snacks </h1>
            </div>
            <div class="card-body">
-             body 3 <br>
-             <button class="btn btn-dark btn-lg btn-block " type="button" name="button">btn</button>
+             <p> Poha chivda 250/kg </p> <br>
+             <p>Parmal chivda 150/1kg</p> <br>
+             <p> Besan ladoo 400/1kg</p> <br>
+             <a href="#" target="_blank" class="btn btn-dark btn-lg btn-block " type="button" name="button">btn</a>
            </div>
          </div>
        </div>
@@ -194,19 +201,20 @@
    <section id="download-title">
      <div class="last-title">
        <h1 class="main-h1">Find the True Love for Your Stomach <br> Today.</h1>
-       <a class="btn btn-dark btn-lg btn-Download-end " type="button" name="button" href="#"><i class="fab fa-google-play"></i> Download</a>
-       <a class="btn btn-light  btn-lg btn-Download-end" type="button" name="button" href=" https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-apple"></i> Download</a>
+       <a target="_blank" class="btn btn-dark btn-lg btn-Download-end " type="button" name="button" href="https://play.google.com/store/apps/details?id=com.boxlemon.meal_plus.meal_plus"><i class="fab fa-google-play"></i> Download</a>
+       <a target="_blank" class="btn btn-light  btn-lg btn-Download-end" type="button" name="button" href=" #"><i class="fab fa-apple"></i> Download</a>
      </div>
    </section>
    <!-- download-title -->
 
    <!-- footer  -->
    <section id="footer">
-     <a class="follow" href="#"><i class="fab fa-twitter"></i></a>
-     <a class="follow" href="#"><i class="fab fa-facebook-f"></i></a>
-     <a class="follow" href="#"><i class="fab fa-instagram"></i></a>
-     <a class="follow" href="#"><i class="fas fa-envelope"></i></a>
+     <a target="_blank" class="follow" href="#"><i class="fab fa-twitter"></i></a>
+     <a target="_blank" class="follow" href="#"><i class="fab fa-facebook-f"></i></a>
+     <a target="_blank" class="follow" href="https://www.instagram.com/mealplusapp/"><i class="fab fa-instagram"></i></a>
+     <a target="_blank" class="follow" href="#"><i class="fas fa-envelope"></i></a>
      <p><i class="far fa-copyright"></i>copyright Meal Plus 2020</p>
+     hope you liked this page if not then i will beat you!!!!
    </section>
    <!-- footer  -->
  </body>
