--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
  <!DOCTYPE html>
  <meta charset="utf-8">
  <title>MEAL PLUS</title>
- <link rel="icon" href="images/Logo M+-04.png">
+ <link rel="icon" href="Logo M+-04.png">
 
 
  <!-- bootstrap css   -->
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
- <!-- css  -->
- <link rel="stylesheet" href="cssfile.css">
+
  <!-- bootstrap   -->
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -16,7 +15,10 @@
  <script src="https://kit.fontawesome.com/08831a7bdc.js" crossorigin="anonymous"></script>
  <!-- google fonts  -->
  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-
+  <!-- css animations -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <!-- css  -->
+  <link rel="stylesheet" href="cssfile.css">
  <body>
    <!-- title -->
    <section id="title">
@@ -27,7 +29,7 @@
 
        <div class="container-fluid ">
          <nav class="navbar navbar-expand-lg navbar-dark ">
-           <img class="mealpluslogo nav-br" src="images/Logo M+-04.png" alt="Meal plus logo "> <a class="navbar-brand nav-br " href="#">Meal PLUS </a>
+           <img class="mealpluslogo nav-br" src="Logo M+-04.png" alt="Meal plus logo "> <a class="navbar-brand nav-br " href="#">Meal PLUS </a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -75,7 +77,7 @@
            </div>
            <div class="col-lg-6  ">
              <center>
-               <img class="mealplus" src="images/m+ proto.png" alt="meal plus picture">
+               <img class="mealplus animate__animated animate__rotateInDownRight" src="m+ proto.png" alt="meal plus picture">
              </center>
 
            </div>
@@ -123,15 +125,15 @@
            <div class="carousel-item active">
              <h2>I am now obsesed with the food thay have provided and this is the best thing i have ever tested in my life </h2>
              <center>
-               <img class="person" src="images/people.png" alt="image of a person ">
-               <p>i am a person 1</p>
+               <img class="person" src="people.png" alt="image of a person ">
+               <p>Rajveer</p>
              </center>
            </div>
            <div class="carousel-item">
              <h2>I used to search for good food every where but now i am free with the help of Meal plus </h2>
              <center>
-               <img class="person" src="images/people.png" alt="image of a person ">
-               <p>i am a person 2</p>
+               <img class="person" src="people2.png" alt="image of a person ">
+               <p>Sumit</p>
              </center>
            </div>
          </div>
@@ -162,7 +164,7 @@
              <p>Chilli paneer 250/portion </p> <br>
              <p>Paneer tikka 250/portion </p> <br>
              <p> Butter paneer masala 250/portion</p> <br>
-             <a href="#" target="_blank" class="btn btn-outline-dark btn-lg btn-block " type="button" name="button">btn </a>
+
            </div>
          </div>
        </div>
@@ -176,7 +178,7 @@
              <p> Fried chicken 230/portion </p><br>
              <p> Butter chicken 269/portion </p> <br>
              <p>Bhuna chicken 230/portion </p> <br>
-             <a href="#" target="_blank" class="btn btn-dark btn-lg btn-block " type="button" name="button">btn</a>
+
            </div>
          </div>
        </div>
@@ -189,7 +191,7 @@
              <p> Poha chivda 250/kg </p> <br>
              <p>Parmal chivda 150/1kg</p> <br>
              <p> Besan ladoo 400/1kg</p> <br>
-             <a href="#" target="_blank" class="btn btn-dark btn-lg btn-block " type="button" name="button">btn</a>
+
            </div>
          </div>
        </div>
@@ -214,7 +216,8 @@
      <a target="_blank" class="follow" href="https://www.instagram.com/mealplusapp/"><i class="fab fa-instagram"></i></a>
      <a target="_blank" class="follow" href="#"><i class="fas fa-envelope"></i></a>
      <p><i class="far fa-copyright"></i>copyright Meal Plus 2020</p>
-     hope you liked this page if not then i will beat you!!!!
+     <p>Website made by </p>
+     <a href="https://sayujyakarnik.github.io/saujyakarnik.github.io/">Sayujya Karnik</a>
    </section>
    <!-- footer  -->
  </body>
