--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
      <a target="_blank" class="follow" href="#"><i class="fas fa-envelope"></i></a>
      <p><i class="far fa-copyright"></i>copyright Meal Plus 2020</p>
      <p>Website made by </p>
-     <a href="https://sayujyakarnik.github.io/saujyakarnik.github.io/">Sayujya Karnik</a>
+     <a href="https://sayujyakarnik.github.io/">Sayujya Karnik</a>
    </section>
    <!-- footer  -->
  </body>
